@@ -173,6 +173,9 @@ dnl			else
 			if test "$enable_libpng" = yes ; then
 				GLCD_DRIVERS="$GLCD_DRIVERS glcd-glcd-png.o"
 			fi
+			if test "$enable_libusb" = yes ; then
+				GLCD_DRIVERS="$GLCD_DRIVERS glcd-glcd-glcd2usb.o"
+			fi
 			AC_CHECK_HEADERS([serdisplib/serdisp.h],[
 				AC_CHECK_LIB(serdisp, serdisp_nextdisplaydescription,[
 					AC_DEFINE(HAVE_SERDISPLIB,[1],[Define to 1 if you have working serdisplib])
