@@ -17,7 +17,8 @@ v0.5dev (ongoing development)
  * Build system: Link LCDd itself with pthread library if available
  * lcdproc client: Unbreak build on OpenBSD non-i386 (E. Barrett)
  * lcdproc client: Fix core dumps on FreeBSD if started as non-root
- * glcd driver: new connection type 'serdisplib'
+ + glcd driver: new connection type 'serdisplib'
+ + glcd driver: new connection type 'glcd2usb'
 
 v0.5.5
  + sed1330 driver: Add support for HG25504 (L. Lagendijk)
